--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,4 +21,8 @@ services:
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
+    acme_api.event.jwt_created_listener:
+        class: App\EventListener\JWTCreatedListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
     # please note that last definitions always *replace* previous ones
