--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -2,17 +2,21 @@ api_platform:
     title: Hello API Platform
     version: 1.0.0
     formats:
-        json: ['application/json']
-        jsonld: ['application/ld+json']
+        json: ["application/json"]
+        jsonld: ["application/ld+json"]
+        multipart: ["multipart/form-data"]
+    error_formats:
+        json: ["application/json"]
+        multipart: ["multipart/form-data"]
     docs_formats:
-        json: ['application/json']
-        jsonld: ['application/ld+json']
-        jsonopenapi: ['application/vnd.openapi+json']
-        html: ['text/html']
+        json: ["application/json"]
+        jsonld: ["application/ld+json"]
+        jsonopenapi: ["application/vnd.openapi+json"]
+        html: ["text/html"]
     defaults:
         stateless: true
         cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
+            vary: ["Content-Type", "Authorization", "Origin"]
         extra_properties:
             standard_put: true
             rfc_7807_compliant_errors: true
